2011-04-05 Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_fsgraph.php, include/functions_graph.php,
	include/graphs/functions_utils.php, include/fgraph.php: cleaned source code
	style.

	* include/functions_graph.php: added first version of function
	"graphic_combined_module2".
	
	* include/graphs/functions_pchart.php: fixed when pass a empty array as
	colour for graphs.
	
	* include/graphs/pChart/pDraw.class.php: fixed to set a color border when
	the graphs haven't a external defined colour.
	
	* include/graphs/fgraph.php: changed for pass the data to static image graph
	generator.
	
	* operation/agentes/graphs.php: changed to use the new graph engine.

2011-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/events_list.php, operation/events/events.php: fixed
	nested forms incompatible with some browsers that fail when validate
	several events and some errors in javascript when validate individual error.

2011-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_fsgraph.php: added check if loaded the class.

	* include/graphs/functions_fsgraph.php: added check if loaded the class.
	Rename some functions and erased the function "fs_module_chart".

	* include/graphs/functions_pchart.php: erased some debug traces.

	* include/graphs/fgraph.php: cleaned the function "area_graph".

	* operation/agentes/stat_win.php: cleaned source code.

2011-04-03 Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/modules/manage_network_templates.php: fixed the
	output of description and name, and fixed the buttons to delete and export.

2011-04-01  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/pChart/pDraw.class.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php: Changed the send data method 
	from sessions to files with serialize functions. Creation of a
	utils functions file. Improvement of the pChart library adding 