@@ -1,3 +1,9 @@
+2011-04-06  Sergio Martin <sergio.martin@artica.es>
+
+	* include/graphs/pChart/pData.class.php
+	include/graphs/pChart/pDraw.class.php: Fixed avoid zero values 
+	into area graphs and clean code
+
 2011-04-05 Miguel de Dios  <miguel.dedios@artica.es>
 	* include/functions_fsgraph.php, include/functions_graph.php,
 	include/graphs/functions_utils.php, include/fgraph.php: cleaned source code
@@ -11,7 +17,7 @@
 	
 	* include/graphs/pChart/pDraw.class.php: fixed to set a color border when
 	the graphs haven't a external defined colour.
-	
+
 	* include/graphs/fgraph.php: changed for pass the data to static image graph
 	generator.
 	
